--- a/assets/tips.html
+++ b/assets/tips.html
@@ -5,9 +5,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/style.css">
     <title>Tips</title>
 </head>
 
@@ -15,100 +19,124 @@
     <header>
         <a href="../index.html"><img class="logo" src="../img/logo-blog.png" alt="logo"></a>
         <h1><a href="../index.html">Nico Blog</a></h1>
-        <!-- <nav>
-            <ul>
-                <li> <a href="../index.html">Home</a></li>
-                <li> <a href="experiences.html">Experiences</a> </li>
-                <li> <a href="#">Tips</a> </li>
-                <li> <a href="faqs.html">FAQ's</a> </li>
-                <li> <a href="contactme.html">Contact me</a> </li>
-            </ul>
-        </nav>
-        <div class="search" >
-            <input type="search" placeholder="search">
-        </div> -->
 
-        <nav id="nav" class="navbar navbar-expand-lg navbar-light">
-            <div class="container-fluid">
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./experiences.html">Experiences</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Tips
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="./tips.html#tip1">Tip 1</a></li>
-                                <li><a class="dropdown-item" href="./tips.html#tip2">Tip 2</a></li>
-                                <li><a class="dropdown-item" href="./tips.html#tip3">Tip 3</a></li>
-                                <li><a class="dropdown-item" href="./tips.html#tip4">Tip 4</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./faqs.html">FAQ's</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./contactme.html">Contact me</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                </div>
+        <nav class="navbar navbar-expand-md navbar-dark">
+            <a class="navbar-brand" href="#"> </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./experiences.html">Experiences</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Tips</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./faqs.html">FAQ's</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="./contactme.html">Contact me</a>
+                    </li>
+                </ul>
             </div>
         </nav>
-
     </header>
 
     <main>
         <h2>Tips</h2>
 
         <div>
-            <h3 id="tip1" >Tip 1</h3>
-            <p class="textoTip" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Est reprehenderit cupiditate necessitatibus odit iure, voluptate ducimus vitae quo voluptas fugiat dolor eaque, temporibus ipsum error blanditiis fugit aut libero laboriosam accusantium nostrum repudiandae aspernatur eum saepe! Neque numquam, possimus cupiditate asperiores rem libero placeat maiores nam ad dolores alias dolorum. Possimus earum dolores nesciunt excepturi perspiciatis! Asperiores enim est maiores, culpa, exercitationem accusamus vel doloremque, minus odit ex praesentium ea quibusdam ipsa error nostrum unde eius corporis numquam? Ullam nesciunt molestias voluptatum inventore dignissimos voluptates. Saepe laborum at molestiae quaerat beatae ab nesciunt ducimus dolorum placeat incidunt iste vel, voluptatem numquam earum libero hic reiciendis voluptatibus eligendi temporibus rem modi? Sed temporibus sit ab voluptatibus ullam fuga veniam porro, facilis ad totam alias quis fugit labore voluptatem debitis facere fugiat possimus asperiores iure ipsam magni excepturi? Libero tempora suscipit voluptatem ex praesentium illo fugiat, modi doloribus, minima asperiores at similique itaque nobis amet molestias laborum obcaecati omnis? Nobis quas tenetur deserunt aut sunt! Harum repudiandae veritatis esse mollitia reprehenderit numquam vitae deleniti iusto qui voluptatum, praesentium consequatur, vel culpa eum voluptatibus non molestiae sit nobis? Nulla vero quas eaque aliquam ipsum assumenda, corporis sit illo officia nesciunt, placeat temporibus tenetur vitae tempore iusto, ex quos? Ipsum adipisci accusamus distinctio, quas inventore cupiditate, incidunt autem enim veniam delectus earum, eos ut consequuntur quod esse repellendus vel praesentium sapiente obcaecati? Minima eaque corporis, possimus et id, odio cum nisi nihil similique doloremque quo repellendus velit ad incidunt illum labore aut sint veritatis officia sed. Veniam facere similique quae quo excepturi dolore pariatur perferendis error tempore, praesentium minus, tenetur fugiat maxime eius aliquid, molestiae dolores. Deserunt sint magni nihil doloribus ducimus id voluptatum aliquid exercitationem suscipit, blanditiis praesentium, accusamus enim vel a fugit? Fuga deleniti perspiciatis neque aperiam minus asperiores quae natus eligendi.</p> 
+            <h3 id="tip1">Tip 1</h3>
+            <p class="textoTip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est reprehenderit cupiditate
+                necessitatibus odit iure, voluptate ducimus vitae quo voluptas fugiat dolor eaque, temporibus ipsum
+                error blanditiis fugit aut libero laboriosam accusantium nostrum repudiandae aspernatur eum saepe! Neque
+                numquam, possimus cupiditate asperiores rem libero placeat maiores nam ad dolores alias dolorum.
+                Possimus earum dolores nesciunt excepturi perspiciatis! Asperiores enim est maiores, culpa,
+                exercitationem accusamus vel doloremque, minus odit ex praesentium ea quibusdam ipsa error nostrum unde
+                eius corporis numquam? Ullam nesciunt molestias voluptatum inventore dignissimos voluptates. Saepe
+                laborum at molestiae quaerat beatae ab nesciunt ducimus dolorum placeat incidunt iste vel, voluptatem
+                numquam earum libero hic reiciendis voluptatibus eligendi temporibus rem modi? Sed temporibus sit ab
+                voluptatibus ullam fuga veniam porro, facilis ad totam alias quis fugit labore voluptatem debitis facere
+                fugiat possimus asperiores iure ipsam magni excepturi? Libero tempora suscipit voluptatem ex praesentium
+                illo fugiat, modi doloribus, minima asperiores at similique itaque nobis amet molestias laborum
+                obcaecati omnis? Nobis quas tenetur deserunt aut sunt! Harum repudiandae veritatis esse mollitia
+                reprehenderit numquam vitae deleniti iusto qui voluptatum, praesentium consequatur, vel culpa eum
+                voluptatibus non molestiae sit nobis? Nulla vero quas eaque aliquam ipsum assumenda, corporis sit illo
+                officia nesciunt, placeat temporibus tenetur vitae tempore iusto, ex quos? Ipsum adipisci accusamus
+                distinctio, quas inventore cupiditate, incidunt autem enim veniam delectus earum, eos ut consequuntur
+                quod esse repellendus vel praesentium sapiente obcaecati? Minima eaque corporis, possimus et id, odio
+                cum nisi nihil similique doloremque quo repellendus velit ad incidunt illum labore aut sint veritatis
+                officia sed. Veniam facere similique quae quo excepturi dolore pariatur perferendis error tempore,
+                praesentium minus, tenetur fugiat maxime eius aliquid, molestiae dolores. Deserunt sint magni nihil
+                doloribus ducimus id voluptatum aliquid exercitationem suscipit, blanditiis praesentium, accusamus enim
+                vel a fugit? Fuga deleniti perspiciatis neque aperiam minus asperiores quae natus eligendi.</p>
             <br><br><br><br><br><br><br><br><br><br>
         </div>
 
         <div>
-            <h3 id="tip2" >Tip 2</h3>
-            <p class="textoTip" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis tempora neque ullam, recusandae in illum corporis ipsum placeat quo porro modi nesciunt vero a nemo officiis fugit saepe inventore veniam.</p> 
+            <h3 id="tip2">Tip 2</h3>
+            <p class="textoTip">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis tempora neque ullam,
+                recusandae in illum corporis ipsum placeat quo porro modi nesciunt vero a nemo officiis fugit saepe
+                inventore veniam.</p>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
 
         <div>
-            <h3 id="tip3" >Tip 3</h3>
-            <p class="textoTip" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos ipsam, minima mollitia eveniet reprehenderit, aperiam assumenda perspiciatis reiciendis quia ea hic, quod nisi? Unde minus harum iusto, architecto exercitationem nisi adipisci. Eveniet impedit asperiores enim.</p> 
+            <h3 id="tip3">Tip 3</h3>
+            <p class="textoTip">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos ipsam, minima
+                mollitia eveniet reprehenderit, aperiam assumenda perspiciatis reiciendis quia ea hic, quod nisi? Unde
+                minus harum iusto, architecto exercitationem nisi adipisci. Eveniet impedit asperiores enim.</p>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
 
         <div>
-            <h3 id="tip4" >Tip 4</h3>
-            <p class="textoTip" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt dolore neque consequatur? Aliquid nesciunt dolor temporibus perferendis, quas nisi aliquam sunt illo ipsa iste excepturi nobis architecto veniam nam velit non vitae veritatis dolorum natus impedit? Tempore fugit cum sit quisquam harum saepe eligendi ullam sequi temporibus, magnam cumque nemo obcaecati possimus accusamus, dolor sint, maiores ipsa. Architecto provident magni nostrum, excepturi facilis quidem velit facere, nemo odit ducimus repellat molestias dolorum suscipit. Incidunt nihil nobis fuga eligendi omnis? Minus!</p>
+            <h3 id="tip4">Tip 4</h3>
+            <p class="textoTip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt dolore neque
+                consequatur? Aliquid nesciunt dolor temporibus perferendis, quas nisi aliquam sunt illo ipsa iste
+                excepturi nobis architecto veniam nam velit non vitae veritatis dolorum natus impedit? Tempore fugit cum
+                sit quisquam harum saepe eligendi ullam sequi temporibus, magnam cumque nemo obcaecati possimus
+                accusamus, dolor sint, maiores ipsa. Architecto provident magni nostrum, excepturi facilis quidem velit
+                facere, nemo odit ducimus repellat molestias dolorum suscipit. Incidunt nihil nobis fuga eligendi omnis?
+                Minus!</p>
         </div>
     </main>
 
     <footer>
-        <p class="textoTres" >Suscribe and recive exclusive information</p>
+        <p class="textoTres">Suscribe and recive exclusive information</p>
         <input class="email" type="email" placeholder="email">
         <button>Send</button>
         <!-- br es para dar espacio solo se usa en parrafos/textos -->
-        <div class="redesSociales" >
+        <div class="redesSociales">
             <img src="../img/instagram.png" alt="">
             <img src="../img/twitter.png" alt="">
             <img src="../img/facebook.png" alt="">
         </div>
-        <p class="ultTexto" >Copyright, Nicolas Ravasi.</p>
+        <p class="ultTexto">Copyright, Nicolas Ravasi.</p>
     </footer>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+        integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
     </script>
 
 </body>
