--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css">
     <title>Home</title>
 </head>
@@ -17,58 +20,35 @@
     <header>
         <a href="#"><img class="logo" src="img/logo-blog.png" alt="logo"></a>
         <h1><a href="#">Nico Blog</a></h1>
-        <!-- <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="assets/experiences.html">Experiences</a></li>
-                <li><a href="assets/tips.html">Tips</a></li>
-                <li><a href="assets/faqs.html">FAQ's</a></li>
-                <li><a href="assets/contactme.html">Contact me</a></li>
-            </ul>
-        </nav>
-        <div class="search">
-            <input type="search" placeholder="search" data-aos="zoom-in" >
-        </div> -->
 
-        <!-- Navbar de BOOTSTRAP (arriba el mio original) -->
+        <!-- Nuevo NAVBAR + menu de hamburguesa -->
 
-        <nav id="nav" class="navbar navbar-expand-lg navbar-light">
-            <div class="container-fluid">
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href=".//assets/experiences.html">Experiences</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Tips
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="./assets/tips.html#tip1">Tip 1</a></li>
-                                <li><a class="dropdown-item" href="./assets/tips.html#tip2">Tip 2</a></li>
-                                <li><a class="dropdown-item" href="./assets/tips.html#tip3">Tip 3</a></li>
-                                <li><a class="dropdown-item" href="./assets/tips.html#tip4">Tip 4</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./assets/faqs.html">FAQ's</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./assets/contactme.html">Contact me</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                </div>
+        <nav class="navbar navbar-expand-md navbar-dark">
+            <a class="navbar-brand" href="#"> </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href=".//assets/experiences.html">Experiences</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href=".//assets/tips.html">Tips</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href=".//assets/faqs.html">FAQ's</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href=".//assets/contactme.html">Contact me</a>
+                    </li>
+                </ul>
             </div>
         </nav>
-
 
     </header>
 
@@ -132,6 +112,16 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+        integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
     </script>
 
 </body>
